Зміни в registration.html

--- a/registration.html
+++ b/registration.html
@@ -56,7 +56,7 @@
                                min="1950-01-01" max="2023-10-06" />
                     </div>
                     <div class="input-box">
-                        <input list="group" name="group">
+                        <input list="group" name="group" placeholder="Обрати групу">
                         <datalist id="group">
                             <option value="ІА-21">ІА-21</option>
                             <option value="ІА-22">ІА-22</option>
